--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 4 HTML Assignment</title>
-
     <style>
         body {
             margin: 0;
             padding: 2rem;
             display: flex;
-            flex-direction: column; /* These 3 lines provide some spacing for all the content that I put here*/
+            flex-direction: column;                     /* These 3 lines provide some spacing for all the content that I put here*/
             gap: 2rem;
         }
         input {
@@ -38,16 +37,16 @@
             width: 50px;
             background-color: bisque;
             border-radius: 50%;
-            overflow:visible;   /* overflow of svg was getting cut of from radius.*/
+            overflow:visible;                       /* overflow of svg was getting cut of from radius.*/
             padding: 8px;
         }
     </style>
 </head>
 <body>
     <nav>
-        <ul class="navigation-bar"> <!-- The links don't have desinations yet but when this is built out more. It will have something to go to-->
+        <ul class="navigation-bar">                             <!-- The links don't have desinations yet but when this is built out more. It will have something to go to-->
             <section>
-                <li><a href="#"><img src="./images/house-svgrepo-com.svg" class="logo" style="background-color: bisque; border-radius: 50%;"/></a></li>
+                <li><a href="#"><img src="./images/house-svgrepo-com.svg" class="logo" style="background-color: bisque; border-radius: 50%;"/></a></li> <!-- Here is my second picture -->
             </section>
             <section class="links">
                 <li class="link"><a href="#Home">Home</a></li>
@@ -56,11 +55,9 @@
             </section>
         </ul>
     </nav>
-
     <img src="https://placehold.co/300x200" alt="Placeholder image" width="300"/>
-
-    <table border="1" style="width: 400px;"> <!-- Links are just to the items on the gucci store.-->
-        <tr>
+    <table border="1" style="width: 400px;">                    <!-- Links are just to the items on the gucci store.-->
+        <tr>                                                    <!-- Here is my header row -->
             <th>Product Name</th>
             <th>Price</th>
             <th>Quantity</th>
@@ -81,7 +78,6 @@
             <td>3</td>
         </tr>
     </table>
-
     <form action="/submit" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" placeholder="Enter your name"/>
@@ -90,15 +86,14 @@
         <label for="message">Message:</label>
         <input type="textArea" id="message" placeholder="Enter your message"/>
         <p>Where did you hear about us?</p>
-        <ul style="list-style-type:none">
+
+        <ul style="list-style-type:none">                       <!-- This is my survey of radio buttons -->
             <li><input style="display: inline;" type="radio" name="survey" value="google"/> <label for="survey">Google</label></li>
             <li><input style="display: inline;" type="radio" name="survey" value="facebook"/> <label for="survey">Facebook</label></li>
             <li><input style="display: inline;" type="radio" name="survey" value="instagram"/> <label for="survey">Instagram</label></li>
             <li><input style="display: inline;" type="radio" name="survey" value="tiktok"/> <label for="survey">Tiktok</label></li>
             <li><input style="display: inline;" type="radio" name="survey" value="other"/> <label for="survey">Other</label></li>
         </ul>
-        
-
         <input type="button" id="submit" value="Submit Information"/>
     </form>
 </body>
