Responsive navbar with a burger menu

--- a/assignments/responsive-navbar.html
+++ b/assignments/responsive-navbar.html
@@ -11,14 +11,25 @@
 </head>
 <body>
     <nav class="nav-container">
-        <ul class="links">
+        <ul class="menu-bar">
                 <li class="link home"><a href="#">Home</a></li>
-                <li class="link toggle"><label class="hamburger-menu"><input type="checkbox"/></label></li>
                 <li class="link about"><a href="#">About</a></li>
                 <li class="link services"><a href="#">Services</a></li>
                 <li class="link contact"><a href="#">Contact</a></li>
         </ul>
+        <ul class="hamburger-menu">
+            <li class="link home"><a href="#">Home</a></li>
+            <li class="link toggle"><label class="drop-down-box"><input type="checkbox"/></label></li>
+        </ul>
     </nav>
+    <aside class="sidebar">
+        <nav>
+            <div>This</div>
+            <div>is</div>
+            <div>a</div>
+            <div>Sidebar</div>
+        </nav>
+    </aside>
     <main>
         <div class="loading"></div>
     </main>
