Added comments to break up css elements and better targeting in the html file

--- a/assignments/responsive-navbar.html
+++ b/assignments/responsive-navbar.html
@@ -12,22 +12,23 @@
 <body>
     <nav class="nav-container">
         <ul class="menu-bar">
-                <li class="link home"><a href="#">Home</a></li>
-                <li class="link about"><a href="#">About</a></li>
-                <li class="link services"><a href="#">Services</a></li>
-                <li class="link contact"><a href="#">Contact</a></li>
+                <li class="link logo"><a class="home" href="#">Home</a></li>
+                <li class="link"><a class="about" href="#">About</a></li>
+                <li class="link"><a class="services" href="#">Services</a></li>
+                <li class="link"><a class="contact" href="#">Contact</a></li>
         </ul>
         <ul class="hamburger-menu">
-            <li class="link home"><a href="#">Home</a></li>
-            <li class="link toggle"><label class="drop-down-box"><input type="checkbox"/></label></li>
+            <li class="link logo"><a class="home" href="#">Home</a></li>
+            <li class="toggle"><label class="drop-down-box"><input type="checkbox"/></label></li>
         </ul>
     </nav>
     <aside class="sidebar">
         <nav>
-            <div>This</div>
-            <div>is</div>
-            <div>a</div>
-            <div>Sidebar</div>
+            <ul class="side-links">
+                <li class="side-link"><a class="about" href="#">About</a></li>
+                <li class="side-link"><a class="services" href="#">Services</a></li>
+                <li class="side-link"><a class="contact" href="#">Contact</a></li>
+            </ul>
         </nav>
     </aside>
     <main>
